Backface visibility set to hidden, to avoid any buds with the animations.

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ body {
 .heading_primary {
   color: #fff;
   text-transform: uppercase;
+  backface-visibility: hidden;
 }
 
 .heading_primary_main,
